2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
	  gtk-gui/MonoDevelop.Gettext.Editor.CatalogHeadersWidget.cs,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs: Updated
	  project icons. Use the base project icon with an overlay to show the
	  type.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Track changes in the Icon extension node.

2007-10-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/CatalogParser.cs, MonoDevelop.Gettext/Catalog.cs:
	  Fixed some parsing/generationg errors in the catalog.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.Editor/CatalogEditor.cs: Destroy the view widget when
	  the view is disposed.

2007-10-25  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/GtkSpell.cs,
	  MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/CatalogEntry.cs, MonoDevelop.Gettext/Catalog.cs:
	  Speed optimized the update process.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.addin.xml, MonoDevelop.Gettext.mdp, Makefile.am,
	  MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs,
	  icons/md-gettext-project_16.png, icons/gettext-overlay-32.png,
	  icons/gettext-overlay-16.png, icons/md-gettext-project_22.png,
	  icons/md-gettext-project_32.png, templates/TranslationProject.xpt.xml:
	  Updated project icons. Use the base project icon with an overlay to show
	  the type.

2007-10-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/CatalogEntry.cs, MonoDevelop.Gettext/Catalog.cs:
	  Fixed re opened "Bug 335326 - Gettext addin breaks zh_CN.po".
