@@ -1,5 +1,10 @@
 2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* MonoDevelop.Gettext/TranslationProject.cs: Set correct target directory
+	  path.
+
+2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
 	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
 	  gtk-gui/MonoDevelop.Gettext.Translator.LanguageChooserDialog.cs,
